hphp/test/zend/good/Zend/tests/cast_to_double.php.expectf
float(0)
float(8754456)
float(0)
float(0)
float(9876545)
float(0.1)
float(0)
float(1)
float(0)
float(1)
float(0)
float(%d)

Fatal error: Uncaught exception 'TypecastException' with message 'Object of class test could not be converted to float' in %s/cast_to_double.php:30
Stack trace:
#0 (): main()
#1 {main}
